--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.17.0",
-    "babel-eslint": "10.0.1",
     "brotli-size": "0.0.1",
     "bytes": "^3.0.0",
     "ci-env": "^1.4.0",
@@ -72,6 +71,18 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb-base": "^12.0.0",
+    "eslint-config-prettier": "^2.3.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-prettier": "^2.2.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.1.1",
+    "prettier": "^1.6.0",
     "babel-cli": "7.0.0-alpha.19",
     "babel-core": "7.0.0-alpha.19",
     "babel-plugin-syntax-async-functions": "7.0.0-alpha.19",
@@ -80,19 +91,7 @@
     "babel-plugin-transform-typescript": "7.0.0-alpha.19",
     "babel-preset-es2015": "7.0.0-alpha.19",
     "babel-preset-stage-3": "7.0.0-alpha.19",
-    "babel-traverse": "7.0.0-alpha.19",
-    "eslint": "5.16.0",
-    "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-config-prettier": "4.2.0",
-    "eslint-config-standard": "12.0.0-alpha.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-prettier": "3.0.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.1.1",
-    "prettier": "1.17.0"
+    "babel-traverse": "7.0.0-alpha.19"
   },
   "collective": {
     "type": "opencollective",
