--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bundlesize",
-  "version": "0.18.1",
+  "name": "@palashmon/bundlesize",
+  "version": "0.18.4",
   "description": "Keep your library size in check",
   "repository": {
     "type": "git",
